welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit : Boolean = false;
	for (nbPas <- 1 to 6) {
		avance();
		if (estSurBiscuit==true) {
			vuBiscuit=true;
		}
		for (nbPas2 <- 1 to 6) {
			recule();
		}
	}
}
